# backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  PERFORMANCE.md  README.md  architecture.md  architecture2.md  crypto.md  dev.config.toml  devenv.toml  gunicorn.sh  keys.md  pyproject.toml  security.md  security2.md  server-deps.Dockerfile
.github/workflows/: ci.yml  test.yml
actions/: local_actions.py  localdead.toml
authpage/: .env.localdev  .env.production  .env.staging  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
authpage/email/: index.html
authpage/register/: index.html
authpage/reset/: index.html
authpage/src/: App.tsx  Auth.scss  Auth.tsx  Authenticate.ts  Back.tsx  Email.scss  Email.tsx  Footer.tsx  Manage.tsx  PasswordStrength.tsx  Register.scss  Register.tsx  api.ts  config.ts  error.ts  index.css  index.scss  loc.json  mainAuth.tsx  mainEmail.tsx  mainManage.tsx  mainRegister.tsx  variables.scss
authpage/src/components/: Back.scss  Back.tsx  ContainBack.tsx  PasswordStrength.tsx  Title.tsx
authpage/src/credentials/: Auth.scss  Auth.tsx  mainAuth.tsx
authpage/src/functions/: api.ts  authenticate.ts  encode.ts  error.ts
autosourced_config/dev/: dev.env
autosourced_config/kv/: deploykv.env
build_conf/: build_conf.sh
build_conf/autosourced_config/db/: deploydb.env
build_conf/autosourced_config/kv/: deploykv.env
db/: Dockerfile  build.sh
db/barman/: .pgpass  Dockerfile  README.md  barman_entrypoint.sh  build.sh  d-dodeka-db-1.conf
db/barman-deploy/: .env.deploy  deploy.sh  docker-compose.yml  down.sh
db/deployment/: .env.db  .env.deploy  README.md  deploy.sh  docker-compose.yml  down.sh
db/postgres/: Dockerfile  README.md  barman.sh  barman.sql  pg_hba.conf  postgresql.conf
db/testsql/: add_test.sql  test.sql
deployment/: deploy.sh  docker-compose.yml  down.sh
localtest/: param.py  pydest.py  random.py  randomt.py  redis_test.py
server/: entrypoint.sh  pyproject.toml  redis_test.py
server/build-server-deps/: Dockerfile
server/deployment/: .env.deploy  docker-compose.yml
server/dev/: .env.deploy  docker-compose.yml
server/redis/: Dockerfile  build.sh  command.txt  redis.conf
server/src/dodekaserver/: app.py  auth.py  basic.py  main.py
server/src/dodekaserver/data/: __init__.py  source.py  user.py
server/src/dodekaserver/db/: __init__.py  admin.py  model.py  settings.py  use.py
server/src/dodekaserver/db/migrations/versions/: 0170a07aac96_table_test_2.py
server/src/dodekaserver/kv/: kv.py  settings.py
server/src/dodekaserver/utilities/: utilities.py
server/tests/: app_test.py  db_tests.py
src/apiserver/: __init__.py  app.py  app_def.py  app_inst.py  app_lifespan.py  define.py  dev.py  env.py  main.py  resources.py
src/apiserver/app/: app_logging.py  define.py  dependencies.py  env.py  error.py  response.py
src/apiserver/auth/: authentication.py  crypto_util.py  header.py  key_util.py  tokens.py  tokens_data.py
src/apiserver/data/: __init__.py  admin.py  classifications.py  file.py  key.py  kv.py  opaquesetup.py  refreshtoken.py  schema.py  signedup.py  source.py  special.py  use.py  user.py
src/apiserver/db/: __init__.py  admin.py  db.py  model.py  ops.py  settings.py  use.py
src/apiserver/define/: __init__.py  config.py  define.py  entities.py  reqres.py  request.py
src/apiserver/emailfn/: __init__.py  emailfn.py  onboard.py  test.py
src/apiserver/kv/: __init__.py  kv.py  settings.py
src/apiserver/lib/: __init__.py  errors.py  utilities.py
src/apiserver/resources/: default.config.toml  define.toml  env.toml  loc.toml  points.json  training.json
src/apiserver/routers/: admin.py  auth.py  basic.py  helper.py  onboard.py  profile.py  update.py  users.py
src/apiserver/utilities/: __init__.py  crypto.py  emailfn.py  gather.py  keys.py  utilities.py
src/auth/: __init__.py  define.py  env.py
src/auth/core/: authorize.py  config.py  error.py  model.py  response.py  util.py  validate.py
src/auth/data/: __init__.py  authentication.py  authorize.py  context.py  error.py  keys.py  register.py  requests.py  source.py  token.py  update.py
src/auth/hazmat/: crypt_dict.py  key_decode.py  sign_dict.py  sign_token.py  structs.py  verify_token.py
src/auth/modules/: authorize.py  login.py  register.py  update.py
src/auth/store/: __init__.py  conn.py  source.py
src/auth/token/: build.py  build_util.py  crypt_token.py  sign_token.py
src/auth/validate/: authorize.py  token.py
src/datacontext/: __init__.py  context.py
src/dodekaserver/: __init__.py  app.py  auth.py  basic.py  env.py  main.py  resources.py
src/dodekaserver/auth/: authentication.py  header.py  key_util.py  models.py  tokens.py  tokens_data.py
src/dodekaserver/data/: __init__.py  entities.py  key.py  kv.py  refreshtoken.py  signedup.py  source.py  use.py  user.py
src/dodekaserver/db/: __init__.py  model.py  ops.py  settings.py  use.py
src/dodekaserver/define/: __init__.py  entities.py  request.py  response.py
src/dodekaserver/kv/: __init__.py  kv.py  settings.py
src/dodekaserver/routers/: auth.py  basic.py  helper.py  onboard.py  profile.py
src/dodekaserver/utilities/: __init__.py  utilities.py
src/schema/: alembic.ini  connect.json  model.py
src/store/: __init__.py  conn.py  db.py  error.py  kv.py  store.py
tests/: app_test.py  app_test_old.py  auth_test.py  benchmark_tests.py  db_tests.py  function_test.py  local_live_tests.py  local_tests.py  localdead.toml  new_app_test.py  real_tests.py  realenv.toml  request_param_test.py  resource_auth_test.py  test.config.toml  test.env  test_app_tokens.py  test_key_token_util.py  test_util.py  testenv.toml  utilities_test.py
tests/query_test/: context_test.py  data_test.py  store_test.py
tests/resources/: querytestenv.toml  test_values.toml
tests/router_test/: authorize_test.py  data_fixtures.py  login_test.py  ranking_test.py  register_tests.py  request_param_test.py  test_util.py  token_test.py  update_test.py
tests/router_tests/: authorize_test.py  login_test.py  login_tests.py  test_util.py  token_test.py
(+139 files in other folders)
