[tool.poetry]
name = "apiserver"
version = "2.1.0"
description = ""
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]
packages = [
    { include = "apiserver", from = "src" },
    { include = "auth", from = "src" },
    { include = "schema", from = "src" },
    { include = "store", from = "src" },
    { include = "datacontext", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
cryptography = "41.0.4"
PyJWT = "2.8.0"
fastapi = "0.103.2"
gunicorn = "21.2.0"
uvicorn = { extras = ["standard"], version = "0.23.2" }
asyncpg = "0.28.0"
psycopg = { extras = ["binary"], version="^3.1.0" }
pydantic = "2.4.2"
redis = "5.0.1"
sqlalchemy = { extras = ["asyncio"], version = "2.0.22" }
opaquepy = "0.3.5"
jinja2 = "^3.1.2"
anyio = "^3.7.1"
regex = "^2023.10.3"
orjson = "^3.9.5"
yarl = "^1.9.2"
loguru = "^0.7.2"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.poetry.scripts]
backend = "apiserver.dev:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.7.0"
pre-commit = "^2.20.0"
httpx = "^0.24.1"
alembic = "^1.12.0"
coverage = "^7.3.2"
black = "23.11.0"
mypy = "^1.5.1"
faker = "^19.3.1"
ruff = "^0.1.5"
types-regex = "^2023.10.3.0"

[tool.black]
target-version = ['py311']
preview = true

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
    "schema.model.env"
]
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["F", "PL", "E", "W", "RUF"]
# We ignore too-many-arguments and line length, as black fixes line length for code
ignore = ["PLR0913", "E501"]
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403"]

[tool.ruff.pycodestyle]
# We allow docs and comments to be long
max-doc-length = 120

[tool.poe.tasks.check]
shell = "pytest && ruff src actions tests && mypy && black src tests actions"
interpreter = ["powershell", "posix"]

